# AaronInsights

./: .gitignore  LOCAL_SETUP.md  app.py  flask_app.py  improvements.txt  main.py  pyproject.toml  requirements.txt  setup_venv.ps1  test_quora.py  waitlist.csv
attached_assets/: Pasted-Upgraded-Blueprint-AI-Driven-Idea-Generator-2-0-1-Concept-Overview-Develop-an-advanced-AI-platfo-1739475546076.txt  Pasted-streamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argument-self-of-type-ut-1739475914391.txt  Pasted-streamlit-runtime-caching-cache-errors-UnhashableParamError-Cannot-hash-argument-self-of-type-ut-1739477014181.txt
components/: idea_generator.py  sidebar.py  visualizations.py
pages/: ideas.py  trends.py
static/css/: style.css
static/js/: main.js
templates/: index.html  signup.html  waitlist.html
utils/: auth.py  data_processor.py  deepseek_client.py  idea_generator.py  idea_ranker.py  market_enricher.py  nlp_processor.py  prompt_processor.py  quora_client.py  reddit_analyzer.py  reddit_client.py  users.py  waitlist.py
