[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.45.2",
    "nltk>=3.9.1",
    "openai>=1.62.0",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "praw>=7.8.1",
    "streamlit>=1.42.0",
    "twilio>=9.4.5",
    "wordcloud>=1.9.4",
]
